@@ -1,5 +1,11 @@
 2011-03-09 mmichaud <michael.michaud@free.fr>
     * com.vividsolutions.jump.workbench.ui.renderer.style.ColorThemingStylePanel
+      com.vividsolutions.jump.workbench.ui.renderer.style.ColorThemingStylePanel
+      first point of bugs 3043312 adressed : now, ColorTheming initialization
+      uses RenderingStylePanel settings.
+
+2011-03-09 mmichaud <michael.michaud@free.fr>
+    * com.vividsolutions.jump.workbench.ui.renderer.style.ColorThemingStylePanel
       bugs 3091363 and 3043312 partially adressed
 
 2011-03-07 mmichaud <michael.michaud@free.fr>
